--- a/src/pages/welcome.css
+++ b/src/pages/welcome.css
@@ -1,16 +1,22 @@
-.home-container {
-    height: 100vh; /* Full viewport height */
-    width: 100vw; /* Full viewport width */
+.welcome-page {
+    height: 100vh;
+    width: 100vw;
     display: flex;
     overflow: hidden;
+    align-items: center;
     background: linear-gradient(80deg, #173518 40%, transparent 45%), 
                 url('/src/resources/welcome_bg.jpg') no-repeat center center;
     background-size: cover;
 }
 
-.content {
-    padding-top: 45vh;
-    padding-left: 10vw;
+.welcome-content {
+    width: 30vw;
+    padding-left: 3vw;
     text-align: center;
     color: white;
+}
+
+.welcome-btn {
+    padding: '10px 20px';
+    font-size: 16px;
 }
