--- a/src/pages/location.css
+++ b/src/pages/location.css
@@ -1,17 +1,17 @@
-.about-page {
+.location-page {
     height: 100vh;
     width: 100vw;
     overflow: scroll;
     background-color: #fffcde;
 }
 
-.about-banner {
+.location-banner {
     width: 100vw;
     height: 800px;
-    background: linear-gradient(0deg, #fffcde 5%, transparent 50%), url('/src/resources/banner2.jpg') no-repeat top center;
+    background: linear-gradient(0deg, #fffcde 5%, transparent 50%), url('/src/resources/banner1.jpg') no-repeat top center;
 }
 
-.about-content {
+.location-content {
     margin-inline: 15vw;
     margin-top: -300px;
     margin-bottom: 5vh;
