--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -15,7 +15,7 @@
     margin-inline: 15vw;
     margin-top: -300px;
     margin-bottom: 5vh;
-    padding-inline: 2vw;
+    padding-inline: 30px;
     padding-bottom: 5vh;
     background-color: #fffcde;
     border-top-left-radius: 50px;
