--- a/src/pages/animals.css
+++ b/src/pages/animals.css
@@ -12,7 +12,7 @@
 }
 
 .animals-content {
-    margin-inline: 15vw;
+    margin-inline: 15%;
     margin-top: -300px;
     margin-bottom: 5vh;
     padding-inline: 30px;
@@ -22,15 +22,85 @@
     border-top-right-radius: 50px;
 }
 
+@media (max-width: 1200px) {
+    .animals-content {
+        transition: 0.4s;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        margin-inline: 0px;
+    }
+}
+
+.title {
+    padding-block: 20px;
+    margin-top: 0px;
+}
+
 .animal-list {
-    height: 400px;
-    max-width: 60vw;
-    background-color: white;
     margin-bottom: 30px;
+    margin-inline: auto;
+    height: 400px;
+    max-width: 800px;
+    background-color: white;
 }
 
 .animal-desc {
-    height: 400px;
-    max-width: 60vw;
+    margin-inline: auto;
+    padding-inline: 50px;
+    min-height: 400px;
+    max-width: 700px;
     background-color: white;
+}
+
+.animal-desc p {
+    font-size: 20px;
+}
+
+.animal-desc h6 {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 400px;
+    font-style: italic;
+    font-size: larger;
+    color: gray;
+    -webkit-user-select: none;
+}
+
+.details-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    column-gap: auto;
+    column-width: 300px;
+    row-gap: 20px;
+    padding-block: 20px;
+    padding-inline: 50px;
+    border-bottom: 2px solid gray;
+}
+
+.grid-element h5 {
+    margin: 0px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.grid-element h4 {
+    margin: 0px;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.AddButton{
+    border-radius: 8px;
+    border: 2px solid green;
+    font-size: 14px;
+    font-weight: bold;
+    color: green;
+    transition-duration: 0.3s;
+    float: right;
+}
+
+button:hover.AddButton{
+    cursor: pointer;
+    background-color: green;
+    color: white;
 }
