--- a/src/pages/map.css
+++ b/src/pages/map.css
@@ -1,3 +1,17 @@
-.location-banner {
+.zooMap-banner {
     background: linear-gradient(0deg, #fffcde 5%, transparent 50%), url('/src/resources/banner1.jpg') no-repeat top center;
+}
+
+.map-text{
+    margin-top: 0;
+    margin-inline: auto;
+    padding-top: 40px;
+    width: 700px;
+    text-align: center;
+}
+
+@media (max-width: 1500px) {
+    .zooMap-content {
+        padding-inline: 0px;
+    }
 }
