--- a/src/components/ScrollTopButton.css
+++ b/src/components/ScrollTopButton.css
@@ -1,16 +1,16 @@
-.button {
+.scroll-top {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
-    padding: 10px;
-    border-radius: 40px;
+    bottom: 40px;
+    right: 40px;
+    border-radius: 100px;
+    border: solid 2px darkgreen;
+    font-size: 40px;
     color: bisque;
-    background-color: rgb(0, 216, 0);
-    z-index: 9;
+    background-color: green;
     cursor: pointer;
+    transition: 0.3s;
 }
 
-.button:hover {
+.scroll-top:hover {
     background-color: darkgreen;
-    transition: 0.3s;
 }
