--- a/src/components/NewsCard.css
+++ b/src/components/NewsCard.css
@@ -6,17 +6,32 @@
     min-height: 400px;
     display: flex;
     flex-direction: column;
+    transition: 0.5s;
+}
+
+.news:hover {
+    transform: scale(1.07);
 }
 
 .news-photo {
-    background-color: brown;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     height: 250px;
     width: 100%;
+    border-bottom: 1px solid black;
+    position: relative;
 }
 
-.news-date {
+.news-photo img {
+    height:100%;
+    width: 100%;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.news-photo p {
+    position: absolute;
+    width: 100%;
     margin-top: 0;
     padding-bottom: 10px;
     border-top-left-radius: 8px;
