--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -23,17 +23,19 @@
 
 .infoCards {
     padding-top: 30px;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    max-width: fit-content;
     margin-inline: auto;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 900px) {
     .infoCards {
-        flex-direction: column;
-        align-items: center;
+        grid-template-columns: 100%;
+        grid-template-areas: "a" "b" "c";
+        row-gap: 30px;
+        justify-self: center;
     }
 }
 
@@ -78,7 +80,7 @@
     column-gap: 30px;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 900px) {
     .newsCards-content {
         grid-template-columns: 100%;
         grid-template-areas: "a" "b" "c";
