--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,13 +1,7 @@
 .login-btn {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    border: none;
-    background-color: #173518;
-    color: #0f220f;
+    width: fit-content;
 }
 
 .login-btn:hover {
-    background-color: white;
     cursor: pointer;
 }
