--- a/src/pages/map.css
+++ b/src/pages/map.css
@@ -1,13 +1,15 @@
 .zooMap-banner {
-    background: linear-gradient(0deg, #fffcde 5%, transparent 50%), url('/src/resources/banner1.jpg') no-repeat top center;
+    background: linear-gradient(0deg, #3E7B27 5%, transparent 50%), url('/src/resources/banner1.jpg') no-repeat top center;
 }
 
 .map-text{
-    margin-top: 0;
+    margin-block: 0;
     margin-inline: auto;
-    padding-top: 40px;
+    padding-block: 40px;
     width: 700px;
     text-align: center;
+    font-family: 'Varela Round';
+    font-size: 25px;
 }
 
 @media (max-width: 1500px) {
