--- a/src/pages/news.css
+++ b/src/pages/news.css
@@ -1,5 +1,5 @@
 .news-banner {
-    background: linear-gradient(0deg, #fffcde 5%, transparent 50%), url('/src/resources/banner1.jpg') no-repeat top center;
+    background: linear-gradient(0deg, #3E7B27 5%, transparent 50%), url('/src/resources/banner1.jpg') no-repeat top center;
 }
 
 .news-grid {
