--- a/src/news-articles/news-style.css
+++ b/src/news-articles/news-style.css
@@ -131,3 +131,12 @@
     margin: 0px;
     margin-left: 20px;
 }
+
+.photo-zoom {
+  display: flex;
+}
+
+.photo-zoom img {
+    width: 100%;
+    height: auto;
+}
