--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -36,7 +36,7 @@
     margin-top: -200px;
     margin-bottom: 5%;
     padding-inline: 30px;
-    padding-bottom: 5%;
+    padding-bottom: 50px;
     background-color: #EFE3C2;
     border-radius: 50px;
 }
